- Install new imports and README.md

--- a/notebooks/domclick.ipynb
+++ b/notebooks/domclick.ipynb
@@ -12,7 +12,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import reservoirpy as rpy\n",
@@ -25,7 +29,7 @@
     "from sklearn.linear_model import Ridge as Ridge_sklearn\n",
     "from sklearn.preprocessing import StandardScaler, PolynomialFeatures\n",
     "import os\n",
-    "from chaos_indic import HurstTraj, NoiseFactor, DimEmb, max_lyapunov, fourier_harmonic_count, ks_entropy_partition\n",
+    "from src.asc_itmo_lab.chaos_indic import HurstTraj, NoiseFactor, DimEmb, max_lyapunov, fourier_harmonic_count, ks_entropy_partition\n",
     "import skccm as ccm\n",
     "from skccm.utilities import train_test_split\n",
     "import warnings\n",
