--- a/notebooks/investigation.ipynb
+++ b/notebooks/investigation.ipynb
@@ -19,7 +19,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from pymssa import MSSA\n",
-    "from chaos_indic import HurstTraj, NoiseFactor, DimEmb, max_lyapunov, fourier_harmonic_count, ks_entropy_partition\n",
+    "from src.asc_itmo_lab.chaos_indic import HurstTraj, NoiseFactor, DimEmb, max_lyapunov, fourier_harmonic_count, ks_entropy_partition\n",
     "from tqdm import tqdm\n",
     "import os\n",
     "import seaborn as sns\n",
